samples/_failures_safe/1761127257_caaae6_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_c6026d5e.c: In function ‘main’:
./samples/SAFE/__tmp_c6026d5e.c:133:9: error: expected identifier or ‘(’ at end of input
  133 |         char
      |         ^~~~
./samples/SAFE/__tmp_c6026d5e.c:133:9: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_c6026d5e.c:133:9: error: expected declaration or statement at end of input
